--- a/src/Kooco.Pikachu.Blazor/Pages/Orders/Order.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Orders/Order.razor
@@ -12,10 +12,18 @@
 @inject IOrderAppService _orderAppService;
 
 <div class="row">
-    <div class="col-6">
+    <div class="col-3">
         <h3>@L["Order"]</h3>
     </div>
-    <div class="col-6 text-lg-end">
+    <div class="col-9 text-lg-end">
+        <div class="d-inline-block me-1">
+            <div class="input-group">
+                <InputText class="form-control form-control-sm search-bar" @bind-Value="@Filter" @onkeydown="CheckForEnter" placeholder="@L["Search"]"></InputText>
+                <Button Type="ButtonType.Button" Class="btn btn-sm btn-primary" Clicked="OnSearch">
+                    <i class="fa fa-search"></i>
+                </Button>
+            </div>
+        </div>
         <div class="custom-check-group me-1">
             <input type="checkbox" class="form-check-input" checked="@IsAllSelected" @onchange="HandleSelectAllChange"></input>
             <Label Class="form-label">@L["SelectAll"]</Label>
@@ -39,7 +47,7 @@
                    ShowPager="true"
                    PageSize="PageSize"
                    RowClicked="ToggleRow"
-                   RowDoubleClicked="OnEditItem"
+                   RowDoubleClicked="NavigateToOrderDetails"
                    SortChanged="OnSortChange">
              <DataGridColumns>
                  <DataGridCommandColumn />
@@ -59,14 +67,18 @@
                     </DisplayTemplate>
                 </DataGridColumn>
                 <DataGridColumn Field="@nameof(OrderDto.CreationTime)" Caption="@L["OrderDate"]" />
-                <DataGridColumn Field="@nameof(OrderDto.Name)" Caption="@L["CustomerName"]" />
-                <DataGridColumn Field="@nameof(OrderDto.Email)" Caption="@L["Email"]" />
+                <DataGridColumn Field="@nameof(OrderDto.CustomerName)" Caption="@L["CustomerName"]" />
+                <DataGridColumn Field="@nameof(OrderDto.CustomerEmail)" Caption="@L["Email"]" />
                 <DataGridColumn Field="@nameof(OrderDto.OrderStatus)" Caption="@L["OrderStatus"]">
                     <DisplayTemplate>
                         @L[context.OrderStatus.ToString()]
                     </DisplayTemplate>
                 </DataGridColumn>
-                <DataGridColumn Field="@nameof(OrderDto.Name)" Caption="@L["ShippingStatus"]" />
+                <DataGridColumn Field="@nameof(OrderDto.CustomerName)" Caption="@L["ShippingStatus"]">
+                    <DisplayTemplate>
+                        待實現
+                    </DisplayTemplate>
+                </DataGridColumn>
                 <DataGridColumn Field="@nameof(OrderDto.PaymentMethod)" Caption="@L["PaymentMethod"]">
                     <DisplayTemplate>
                         @L[context.PaymentMethod.ToString()]
@@ -90,39 +102,31 @@
                         </div>
                         
                         <Divider Class="m-1"></Divider>
-                        <div class="row mb-1">
-                            <div class="col-6">
-                                <span class="fw-bold me-3">@L["RecipientInformation"]</span>
-                                <span>@context.Name / @context.Phone</span>
-                            </div>
-                            <div class="col-6">
-                                <span class="fw-bold me-3">@L["ShippingMethod"]</span>
-                                <span>@L[context.DeliveryMethod.ToString()]</span>
-                            </div>
-                        </div>
-                        <div class="row mb-1">
-                            <div class="col-12">
-                                <span class="fw-bold me-3">@L["Address"]</span>
-                                <span>@context.AddressDetails, @context.Road, @context.District, @context.City</span>
-                            </div>
-                        </div>
-                        <div class="row mb-1">
-                            <div class="col-12">
-                                <span class="fw-bold me-3">@L["Remarks"]</span>
-                                <span>@context.Remarks</span>
-                            </div>
-                        </div>
-                        <div class="row mb-1">
-                            <div class="col-12">
-                                <span class="fw-bold me-3">@L["MerchantRemarks"]</span>
-                                <span>@context.Remarks</span>
-                            </div>
-                        </div>
-                        <div class="row mb-1">
-                            <div class="col-12">
-                                <span class="fw-bold me-3">@L["OrderItems"]</span>
-                                <span class="d-inline-block">
-                                    <div class="d-flex flex-column">
+                        <table>
+                            <tbody>
+                                <tr>
+                                    <td>@L["RecipientInformation"]</td>
+                                    <td>@context.CustomerName / @context.CustomerPhone</td>
+                                </tr>
+                                <tr>
+                                    <td>@L["ShippingMethod"]</td>
+                                    <td>@L[context.DeliveryMethod.ToString()]</td>
+                                </tr>
+                                <tr>
+                                    <td>@L["Address"]</td>
+                                    <td>@context.AddressDetails, @context.Road, @context.District, @context.City</td>
+                                </tr>
+                                <tr>
+                                    <td>@L["Remarks"]</td>
+                                    <td>@context.Remarks</td>
+                                </tr>
+                                <tr>
+                                    <td>@L["MerchantRemarks"]</td>
+                                    <td>@context.Remarks</td>
+                                </tr>
+                                <tr>
+                                    <td>@L["OrderItems"]</td>
+                                    <td>
                                         @foreach (var item in orderItems)
                                         {
                                             <div mb-1>
@@ -130,10 +134,10 @@
                                                 <span>@item.Item.ItemName x @item.Quantity</span>
                                             </div>
                                         }
-                                    </div>
-                                </span>
-                            </div>
-                        </div>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
                     </div>
                 }
             </DetailRowTemplate>
