--- a/src/Kooco.Pikachu.Blazor/Pages/SetItem/CreateSetItem.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/SetItem/CreateSetItem.razor
@@ -159,7 +159,7 @@
                     @L["AddItem"]
                 </div>
                 <div class="col-9">
-                    <Autocomplete TItem="KeyValueDto"
+                    <Autocomplete TItem="ItemWithItemTypeDto"
                                   TValue="Guid?"
                                   Data="@ItemsList"
                                   TextField="@(( item ) => item.Name)"
