--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
@@ -547,16 +547,15 @@
                                             </Autocomplete>
                                             @if (selectedItem.Id != null)
                                             {
-                                               
-                                                    string? firstImage;
-                                                    if (selectedItem.ItemType==ItemType.Item)
-                                                    {
-                                                         firstImage = selectedItem.Item.Images?.FirstOrDefault()?.ImageUrl;
-                                                    }
-                                                    else
-                                                    {
-                                                         firstImage = selectedItem.SetItem.Images?.FirstOrDefault()?.ImageUrl;
-                                                    }
+                                                string? firstImage;
+                                                if (selectedItem.ItemType==ItemType.Item)
+                                                {
+                                                    firstImage = selectedItem.Item?.Images?.FirstOrDefault()?.ImageUrl;
+                                                }
+                                                else
+                                                {
+                                                    firstImage = selectedItem.SetItem?.Images?.FirstOrDefault()?.ImageUrl;
+                                                }
                                                  <div class="d-flex mt-3">
 
                                                     @if(firstImage != null)
@@ -584,7 +583,7 @@
                                                                                 </select class="form-control dropdown">
                                                                             </div>
                                                                         }
-                                                                        @if (!selectedItem.Item.Attribute2Name.IsNullOrEmpty()&& selectedItem.Item.ItemDetails!=null)
+                                                                        @if (!selectedItem.Item.Attribute2Name.IsNullOrEmpty() && selectedItem.Item.ItemDetails != null)
                                                                         {
                                                                             <div class="mt-2">
                                                                                 <select class="form-control dropdown">
@@ -611,20 +610,20 @@
                                                                             </div>
                                                                         }
                                                                     } 
-                                                                         </div>
+                                                                </div>
                                                             }
                                                         </div>
                                                     }
                                                     @if (module.GroupBuyModuleType == GroupBuyModuleType.ProductDescription)
                                                     {
-                                                         string? ItemDescription;
-                                                        if (selectedItem.ItemType==ItemType.Item)
+                                                        string? ItemDescription;
+                                                        if (selectedItem.ItemType == ItemType.Item)
                                                         {
-                                                             ItemDescription = selectedItem.Item.ItemDescription;
+                                                             ItemDescription = selectedItem.Item?.ItemDescription;
                                                         }
                                                         else
                                                         {
-                                                             ItemDescription = selectedItem.SetItem.Description;
+                                                             ItemDescription = selectedItem.SetItem?.Description;
                                                         }
                                                         <div class="ps-3">
                                                             <p> @((MarkupString)ItemDescription) </p>
